[package]
name = "todo-application-backend"
version = "0.1.0"
authors = ["Siddharth Teli <telisiddharth123@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket={version="0.5.0-rc.1", features=["secrets","tls","json"]}
mongodb ={version="1.2.2",default-features=false,features=["async-std-runtime"]}
serde={version="1.0.126",features=["derive"]}
